# copypasteck

./: .travis.yml  Cargo.toml  README.md
examples/: basic_if.rs  basic_match.rs
src/: hasher.rs  lib.rs
