[package]
name = "copypasteck"
version = "0.1.4"
authors = [ "Huon Wilson <dbau.pp@gmail.com>" ]

homepage = "https://github.com/huonw/copypasteck"
repository = "https://github.com/huonw/copypasteck"
license = "MIT/Apache-2.0"
keywords = ["plugin", "lint"]
readme = "README.md"
description = """
A plugin lint for detecting `if` and `match` branches with duplicated
conditions or contents.
"""

[lib]
name = "copypasteck"
plugin = true
